[health] add simple health endpoint
