# api/swagger.json
@@ -61,6 +61,32 @@
                 }
             }
         },
+        "/3rdparty/v1/health": {
+            "get": {
+                "description": "Checks if service is healthy",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "Health check result",
+                        "schema": {
+                            "$ref": "#/definitions/smsgateway.HealthResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Service is unhealthy",
+                        "schema": {
+                            "$ref": "#/definitions/smsgateway.HealthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/3rdparty/v1/message": {
             "get": {
                 "security": [
@@ -387,7 +413,6 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Device",
                     "Upstream"
                 ],
                 "summary": "Send push notifications",
@@ -483,6 +508,79 @@
                     "example": "An error occurred"
                 }
             }
+        },
+        "smsgateway.HealthCheck": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "description": "A human-readable description of the check.",
+                    "type": "string"
+                },
+                "observedUnit": {
+                    "description": "Unit of measurement for the observed value.",
+                    "type": "string"
+                },
+                "observedValue": {
+                    "description": "Observed value of the check.",
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "Status of the check.\nIt can be one of the following values: \"pass\", \"warn\", or \"fail\".",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/smsgateway.HealthStatus"
+                        }
+                    ]
+                }
+            }
+        },
+        "smsgateway.HealthChecks": {
+            "type": "object",
+            "additionalProperties": {
+                "$ref": "#/definitions/smsgateway.HealthCheck"
+            }
+        },
+        "smsgateway.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "checks": {
+                    "description": "A map of check names to their respective details.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/smsgateway.HealthChecks"
+                        }
+                    ]
+                },
+                "releaseId": {
+                    "description": "Release ID of the application.\nIt is used to identify the version of the application.",
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "Overall status of the application.\nIt can be one of the following values: \"pass\", \"warn\", or \"fail\".",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/smsgateway.HealthStatus"
+                        }
+                    ]
+                },
+                "version": {
+                    "description": "Version of the application.",
+                    "type": "string"
+                }
+            }
+        },
+        "smsgateway.HealthStatus": {
+            "type": "string",
+            "enum": [
+                "pass",
+                "warn",
+                "fail"
+            ],
+            "x-enum-varnames": [
+                "HealthStatusPass",
+                "HealthStatusWarn",
+                "HealthStatusFail"
+            ]
         },
         "smsgateway.Message": {
             "type": "object",
